WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297053
cookieStore.set() should not append / to path
https://bugs.webkit.org/show_bug.cgi?id=297053
Summary
cookieStore.set() should not append / to path
Anne van Kesteren
Reported
2025-08-07 06:42:53 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2025-08-07 06:44:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49058
Anne van Kesteren
Comment 2
2025-08-08 06:51:51 PDT
<
rdar://142339417
>
EWS
Comment 3
2025-08-08 09:01:55 PDT
Committed
298397@main
(b33916a33369): <
https://commits.webkit.org/298397@main
> Reviewed commits have been landed. Closing PR #49058 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug