cookieStore.set() should not append / to path https://bugs.webkit.org/show_bug.cgi?id=297053 rdar://142339417

Reviewed by Rupin Mittal.

The specification was updated with
https://github.com/whatwg/cookiestore/commit/abae748ecf1f94069772b80955dbf73d752221aa
and Chromium was as well. So should we.

Canonical link: https://commits.webkit.org/298397@main